Hell on earth solved. Web has normal wrapping now. Nav works as it should.

--- a/css/master.css
+++ b/css/master.css
@@ -20,6 +20,7 @@ medium - 500
     --font-bold: 500;
 
     --spacing: 1em;
+    --max-width: 1400px;
 
 }
 
@@ -69,21 +70,30 @@ h3 {
     display: none;
 }
 
+.wrap {
+    max-width: 1400px;
+    margin: 0 auto;
+}
+
+
 /* -- Nav menu -- */
 
 header {
     width: 100%;
-    padding: 0 calc(var(--spacing) * 2);
     padding-top: var(--spacing);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
     position: fixed;
     z-index: 1;
     background-color: white;
 }
 
-header div.vava {
+header .wrap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0 calc(var(--spacing) * 2);
+}
+
+header .wrap div.vava {
     width: 50%;
 }
 
@@ -92,20 +102,20 @@ header div.vava {
     text-align: right;
 }
 
-header nav {
+header .wrap nav {
     padding-top: var(--spacing);
     width: 100%;
     margin: 0 auto;
 }
 
-header ul li {
+header .wrap ul li {
     display: inline-block;
     width: 100%;
     text-align: center;
     padding: 10px 0;
 }
 
-header a {
+header .wrap a {
     text-decoration: none;
     color: var(--text-title);
     font-weight: 500;
@@ -267,11 +277,7 @@ footer {
 
 /* -- Desktop -- */
 
-@media (width >1200px) {
-
-    .wrapper {
-        width: 80%;
-    }
+@media (min-width: 760px) {
 
     section {
         padding: 50px 0;
@@ -286,25 +292,40 @@ footer {
 
     header {
         padding: 2em 0;
+
+    }
+
+    header .wrap {
         justify-content: space-between;
         flex-direction: row;
+        padding: 0;
     }
 
-    header div.vava {
+    header .wrap nav {
+        width: 80%;
+        order: 1;
+        padding-top: 0;
+    }
+
+    header .wrap div.vava {
         width: 20%;
+        order: 2;
+        text-align: right;
     }
 
-    header ul li {
+    header .wrap ul li {
         display: inline-block;
         width: auto;
         text-align: left;
-        padding: 0px 20px;
+        padding: 0;
     }
 
-    header a {
-        text-decoration: none;
-        color: var(--text-title);
-        transition: 1s;
+    header .wrap a {
+        padding: 10px 20px;
+    }
+
+    header .wrap li:first-child a {
+        padding-left: 0;
     }
 
     header a:hover {
@@ -340,44 +361,10 @@ footer {
 
 
 
-    /* -- Meet the team -- */
-
-    /* header {
-        width: 100%;
-        padding: 0 calc(var(--spacing) * 2);
-        padding-top: var(--spacing);
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        position: fixed;
-        z-index: 1;
-        background-color: white;
-    }
+    /* -- Nav actualizado -- */
 
 
 
-    header nav {
-        padding-top: var(--spacing);
-        width: 100%;
-        margin: 0 auto;
-    }
-
-    header ul li {
-        display: inline-block;
-        width: 100%;
-        text-align: center;
-        padding: 10px 0;
-    }
-
-    header a {
-        text-decoration: none;
-        color: var(--text-title);
-        font-weight: 500;
-    }
-
-    main {
-        padding-top: calc(var(--spacing) * 4)
-    } */
 
 
     /* -- Meet the team -- */
